<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.pivotalsoft.property.FilterActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/property_type" />

            <CheckBox
                android:id="@+id/checkBoxApartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apartment" />

            <CheckBox
                android:id="@+id/checkBoxVilla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/villa" />

            <CheckBox
                android:id="@+id/checkBoxBuilder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/builder_floor" />

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/locality"
                android:layout_marginTop="30dp"
                android:focusable="false"
                android:clickable="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtRangePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />



            </LinearLayout>

            <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                android:id="@+id/rangeSeekbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
               android:scrollbarSize="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_bed_rooms" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_margin="10dp">

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4+"
                    android:layout_weight="1"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Area (in aq ft) : "
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtRangeSqft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1200 "
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />



            </LinearLayout>

            <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                android:id="@+id/rangeSeekbar2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad_posted_date" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_24_hours"
                    />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_a_week"
                    />

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_two_weeks"
                    />

                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_a_month"
                    />



            </RadioGroup>


        </LinearLayout>

    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_orange_light"
        android:textColor="@color/colorAccent"/>

</RelativeLayout>
