<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="5dp"
        android:id="@+id/parentLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.7">

            <ImageView
                android:id="@+id/imgProperty"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:src="@drawable/house_image"
                android:scaleType="centerCrop"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3"
            android:padding="5dp"
            android:layout_gravity="center_vertical">



                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/fully_furnished_flat" />

                <TextView
                    android:id="@+id/txtmobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/_9490833955" />

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/_3000" />


            <ImageView
                android:id="@+id/overflow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_dots"
                android:layout_gravity="right|top"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>